Fixed an issue regarding commit messages getting too long. Created adminview

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -852,7 +852,7 @@
     bottom: 0;
     height: 30px;
     background-color: #f5f5f5;
-    z-index: -1;
+    z-index: 0;
 }
 
 .container .credit {
@@ -862,4 +862,8 @@
 
 .muted {
     color: #999;
+}
+
+.container-fluid {
+    z-index: 1;
 }
